--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "node-wheater-cli",
+  "name": "node-weater-cli-blackmarllboro",
   "version": "1.0.0",
-  "description": "cli for getting wheather",
-  "main": "index.js",
-  "bin": "./index.js",
+  "description": "cli for getting weather",
+  "main": "weather.js",
+  "bin": {
+    "weather": "weather.js"
+  },
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,5 +24,9 @@
   "bugs": {
     "email": "3100194@gmail.com",
     "url": "https://github.com/blackmarllbor0"
+  },
+  "dependencies": {
+    "axios": "^0.27.2",
+    "chalk": "^5.0.1"
   }
 }
