--- a/package.json
+++ b/package.json
@@ -1,32 +1,42 @@
 {
-  "name": "node-weater-cli-blackmarllboro",
+  "name": "wheather-cli",
   "version": "1.0.0",
-  "description": "cli for getting weather",
-  "main": "weather.js",
-  "bin": {
-    "weather": "weather.js"
-  },
-  "type": "module",
+  "description": "weather utility",
+  "main": "src/main.ts",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/main.js",
+    "dev": "tsx watch src/main.ts",
+    "build": "tsc"
+  },
+  "type": "commonjs",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/blackmarllbor0/wheather-cli.git"
   },
   "keywords": [
     "cli",
-    "wheather"
+    "weather",
+    "weather-cli"
   ],
   "author": "blackmarllbor0",
   "license": "ISC",
-  "repository": {
-    "type": "git",
-    "url": "https://google.com"
-  },
-  "bugs": {
-    "email": "3100194@gmail.com",
-    "url": "https://github.com/blackmarllbor0"
+  "homepage": "https://github.com/blackmarllbor0/wheather-cli#readme",
+  "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/chalk": "^2.2.0",
+    "@types/colors": "^1.2.1",
+    "@types/node": "^18.15.3",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.4",
+    "tsx": "^3.12.5",
+    "typescript": "^5.0.2"
   },
   "dependencies": {
-    "axios": "^0.27.2",
-    "chalk": "^5.0.1"
+    "axios": "^1.3.4",
+    "colors": "^1.4.0"
   }
 }
