--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wheather-cli",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "weather utility",
   "main": "src/main.ts",
   "scripts": {
@@ -11,7 +11,7 @@
   "type": "commonjs",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/blackmarllbor0/wheather-cli.git"
+    "url": "https://github.com/blackmarllbor0/wheather-cli.git"
   },
   "keywords": [
     "cli",
